Added debug ost in gitignore to prevent from import again

--- a/.gitignore
+++ b/.gitignore
@@ -160,3 +160,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
+# DEBUG OST
+assets/OST/Hyrule Field - The Legend of Zelda Ocarina of Time.mp3
+assets/OST/Lost Woods - The Legend of Zelda Ocarina of Time.mp3
+assets/OST/Title Theme - The Legend of Zelda Ocarina of Time.mp3
+assets/OST/Vampire Killer.mp3
+assets/sounds/Vampire Killer.mp3
